--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pydantic-settings (==2.1.0)",
     "aiomysql (>=0.2.0,<0.3.0)",
     "aiofiles (>=24.1.0,<25.0.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "bcrypt (<4.0.0)"
 ]
 
 [tool.poetry]
