--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "aiomysql (>=0.2.0,<0.3.0)",
     "aiofiles (>=24.1.0,<25.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
-    "bcrypt (<4.0.0)"
+    "bcrypt (<4.0.0)",
+    "pyjwt (==2.8.0)"
 ]
 
 [tool.poetry]
