--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ packages = [{ include = "shiori", from = "src" }]
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.4.0"
+pytest = "7.4.4"
 black = "^25.1.0"
-pytest-asyncio = "^1.0.0"
+pytest-asyncio = "0.23.3"
 httpx = "^0.26.0"
 isort = "^6.0.1"
 
