--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -36,12 +36,15 @@ services:
       - redis
     ports:
       - "8001:8001"
+    volumes:
+      - redis_insight_data:/db
     networks:
       - shiori-net
 
 volumes:
   mysql_data:
   redis_data:
+  redis_insight_data:
 
 networks:
   shiori-net:
