--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "bcrypt (<4.0.0)",
     "pyjwt (==2.8.0)",
     "redis (==5.0.1)",
-    "ujson (==5.9.0)"
+    "ujson (==5.9.0)",
+    "cryptography (>=45.0.5,<46.0.0)"
 ]
 
 [tool.poetry]
