--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "Jungyu Kim", email = "jungyu3826@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "pydantic (>=2.11.7,<3.0.0)",
@@ -23,7 +23,9 @@ dependencies = [
     "pyjwt (==2.8.0)",
     "redis (==5.0.1)",
     "ujson (==5.9.0)",
-    "cryptography (>=45.0.5,<46.0.0)"
+    "cryptography (>=45.0.5,<46.0.0)",
+    "beanie (>=2.0.0,<3.0.0)",
+    "pymongo (>=4.13.2,<5.0.0)"
 ]
 
 [tool.poetry]
