feat : Add Mongo db fixture

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 filterwarnings =
     ignore::DeprecationWarning
 asyncio_mode = auto
+markers =
+    mongo: marks tests that use MongoDB (deselect with '-m "not mongo"')
