--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "Jungyu Kim", email = "jungyu3826@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.11,<4.0"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "pydantic (>=2.11.7,<3.0.0)",
@@ -25,7 +25,9 @@ dependencies = [
     "ujson (==5.9.0)",
     "cryptography (>=45.0.5,<46.0.0)",
     "beanie (>=2.0.0,<3.0.0)",
-    "pymongo (>=4.13.2,<5.0.0)"
+    "pymongo (>=4.13.2,<5.0.0)",
+    "transformers (>=4.55.3,<5.0.0)",
+    "torch (>=2.8.0,<3.0.0)"
 ]
 
 [tool.poetry]
