--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ dependencies = [
     "beanie (>=2.0.0,<3.0.0)",
     "pymongo (>=4.13.2,<5.0.0)",
     "transformers (>=4.55.3,<5.0.0)",
-    "torch (>=2.8.0,<3.0.0)"
+    "torch (>=2.8.0,<3.0.0)",
+    "langchain (>=0.3.27,<0.4.0)",
+    "langchain-openai (>=0.3.33,<0.4.0)"
 ]
 
 [tool.poetry]
