feat: add Celery worker service to docker-compose

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -59,6 +59,21 @@ services:
     networks:
       - shiori-net
 
+  worker:
+    build: .
+    container_name: shiori-celery-worker
+    restart: always
+    command: celery -A core.celery_app.celery_app worker --loglevel=info
+    depends_on:
+      - redis
+      - mongodb
+      - mysql
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/2
+      - CELERY_BACKEND_URL=redis://redis:6379/3
+    networks:
+      - shiori-net
+
 
 volumes:
   mysql_data:
