--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     build: .
     container_name: shiori-celery-worker
     restart: always
-    command: celery -A core.celery_app.celery_app worker --loglevel=info
+    command: celery -A core.celery_app.celery_app worker -Q summary-queue --loglevel=info
     depends_on:
       - redis
       - mongodb
