--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "transformers (>=4.55.3,<5.0.0)",
     "torch (>=2.8.0,<3.0.0)",
     "langchain (>=0.3.27,<0.4.0)",
-    "langchain-openai (>=0.3.33,<0.4.0)"
+    "langchain-openai (>=0.3.33,<0.4.0)",
+    "celery (>=5.5.3,<6.0.0)"
 ]
 
 [tool.poetry]
