--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -60,10 +60,11 @@ services:
       - shiori-net
 
   worker:
-    build: .
+    build:
+      context: ../..
+      dockerfile: ./docker/dev/Dockerfile.worker
     container_name: shiori-celery-worker
     restart: always
-    command: celery -A core.celery_app.celery_app worker -Q summary-queue --loglevel=info
     depends_on:
       - redis
       - mongodb
